...
            "value" : "Neue Einkaufsliste"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "New shopping list"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Új bevásárlólista"
...
            "value" : "Abbrechen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Mégse"
...
            "value" : "Neuer Haushalt"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "New household"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Új háztartás"
...
            "value" : "Suchen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Search"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Keresés"
...
            "value" : "Löschen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Törlés"
...
            "value" : "Bearbeiten"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Edit"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Szerkesztés"
...
            "value" : "Milch"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Milk"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tej"
...
            "value" : "Vorrat"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Inventory"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Készlet"
...
            "state" : "translated",
            "value" : "Vágási terület. Csippentéssel nagyíts, húzással mozgasd."
          }
        }
      }
    },
    "photoEditor.done" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Fertig"
...
            "state" : "translated",
            "value" : "Ez a fotó nem nyitható meg."
          }
        }
      }
    },
    "photoEditor.rotate" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nach links drehen"
...
            "value" : "Favorit"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Favorite"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Kedvenc"
...
            "state" : "translated",
            "value" : "Fotó hozzáadása"
          }
        }
      }
    },
    "product.form.choosePhoto" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Foto auswählen"
...
            "state" : "translated",
            "value" : "Termék szerkesztése"
          }
        }
      }
    },
    "product.form.editPhoto" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zuschneiden oder drehen"
...
            "state" : "translated",
            "value" : "Új termék"
          }
        }
      }
    },
    "product.form.photo" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Foto"
...
            "state" : "translated",
            "value" : "Fotó"
          }
        }
      }
    },
    "product.form.removePhoto" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Foto entfernen"
...
            "state" : "translated",
            "value" : "Fotó eltávolítása"
          }
        }
      }
    },
    "product.form.takePhoto" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Foto aufnehmen"
...
            "value" : "Einkaufen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Shopping"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bevásárlás"
...
            "state" : "translated",
            "value" : "Új háztartás"
          }
        }
      }
    },
    "space.settings" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Einstellungen…"
...
            "value" : "In neuem Fenster öffnen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Open in New Window"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Megnyitás új ablakban"
...
